chore: polish library code (fix some SonarLint findings)